--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="name">Name</label>
+	<input type="name" id="#name" required> <br>
+	<label for="email">Email</label>
+	<input type="email" id="#email" required> <br>
+	<label for="password">Password</label>
+	<input type="password" id="#password" required> <br>
+	<label for="cars">Cars</label>
+	<input type="radio" id="Cars" > BMW 
+	<input type="radio" id="Cars" > Audi
+	<input type="radio" id="Cars" > Mercedez<br>
+	
+	<label for="age">Age</label>
+	<input type="number" id="#age" required> <br>
+	<label for="dob">dob</label>
+	<input type="date" id="#dob" required> <br>
+	<button >Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
