--- a/main.html
+++ b/main.html
@@ -8,12 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="Car Form">
 	<label for="name">Name</label>
 	<input type="name" id="#name" required> <br>
 	<label for="email">Email</label>
 	<input type="email" id="#email" required> <br>
 	<label for="password">Password</label>
 	<input type="password" id="#password" required> <br>
+	<label for="gender">Gender</label>
+	<input type="radio" id="gender"> Male 
+	<input type="radio" id="gender"> Female <br>
 	<label for="cars">Cars</label>
 	<input type="radio" id="Cars" > BMW 
 	<input type="radio" id="Cars" > Audi
@@ -24,6 +28,7 @@
 	<label for="dob">dob</label>
 	<input type="date" id="#dob" required> <br>
 	<button >Submit</button>
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
