--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action="Car Form">
+	<form method="form">
 	<label for="name">Name</label>
 	<input type="name" id="name" required> <br>
 	<label for="email">Email</label>
@@ -16,8 +16,8 @@
 	<label for="password">Password</label>
 	<input type="password" id="password" required> <br>
 	<label for="gender">Gender</label>
-	<input type="radio" id="gender"> Male 
-	<input type="radio" id="gender"> Female <br>
+	<input type="radio" name="gender"> Male 
+	<input type="radio" name="gender"> Female <br>
 	<label for="cars">Choose a Car</label>
 	<select name="cars" id="cars">
 	<option value="BMW"> BMW 
