--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form method="form">
+	<form method="post">
 	<label for="name">Name</label>
 	<input type="name" id="name" required> <br>
 	<label for="email">Email</label>
